ingress-com-auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-MUDAR
  namespace: MUDAR
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kafka-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kafka'
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: DNS.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nome-do-deploy
                port:
                  number: 8080
