ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-MUDAR
  namespace: MUDAR
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: DNS.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nome-do-deploy
                port:
                  number: 8080
